--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="formPanel">
         <span>Enter your name here:</span>
         <form id="name-form">
-            <input type="text" id="name-form">
+            <input type="text" id="name-input">
             <input type="submit" id="add-name" value="submit">
         </form>
     </div>
@@ -48,13 +48,13 @@
                         <h3 class="panel-title text-center"></h3>
                     </div>
                     <div class="panel-body panelOption text-center">
-		                <div class="option">Volcano</div>
+		                <button class="p1Option">Volcano</button>
 		            </div>
 		            <div class="panel-body panelOption text-center">
-		                <div class="option">Lizard</div>
+		                <button class="p1Option">Lizard</button>
 		            </div>
 		            <div class="panel-body panelOption text-center">
-		                <div class="option">Spock</div>
+		                <button class="p1Option">Spock</button>
 		            </div>
                     <div class="panel-body panelStats text-center">
 		                <div class="stats" id="player1Stats"></div>
@@ -73,13 +73,13 @@
 						<h3 class="panel-title text-center" id="playerTwoName"></h3>
 					</div>
 		            <div class="panel-body panelOption text-center">
-		                <div class="option">Volcano</div>
+		                <button class="p1Option">Volcano</button>
 		            </div>
 		            <div class="panel-body panelOption text-center">
-		                <div class="option">Lizard</div>
+		                <div class="p1Option">Lizard</div>
 		            </div>
 		            <div class="panel-body panelOption text-center">
-		                <div class="option">Spock</div>
+		                <div class="p1Option">Spock</div>
 		            </div>
 		            <div class="panel-body panelStats text-center">
 		                <div class="stats" id="player2Stats"></div>
