--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 						<h3 class="panel-title text-center" id="playerTwoName"></h3>
 					</div>
 		            <div class="panel-body panelOption text-center">
-		                <button class="p1Option">Volcano</button>
+		                <button class="p2Option">Volcano</button>
 		            </div>
 		            <div class="panel-body panelOption text-center">
-		                <div class="p1Option">Lizard</div>
+		                <button class="p2Option">Lizard</button>
 		            </div>
 		            <div class="panel-body panelOption text-center">
-		                <div class="p1Option">Spock</div>
+		                <button class="p2Option">Spock</button>
 		            </div>
 		            <div class="panel-body panelStats text-center">
 		                <div class="stats" id="player2Stats"></div>
