--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link href="Assets/css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Germania+One" rel="stylesheet">
     <title>Volcano, Lizard, Spock</title>
 </head>
 <body>
     <div class="container">
         <div class="jumbotron">
-        <h1 class="text-center">Volcano, Lizard, Spock</h1>
+        <h1 class="text-center text2">Volcano, Lizard, Spock</h1>
         </div>
     </div>
     <div class="dropdown">
-        <span>How to Play</span>
+        <span class="text1">How to Play</span>
         <div class="dropdown-content">
-            <p>
+            <p class="text1">
                 This is like your typical game of rock, paper, scisors only instead of using rock, paper, 
                 scisors you will be using volcano, lizard, Spock. In this game, volcano beats Spock, Spock 
                 beats lizard, and lizard beats volcano. All you have to do is enter your name in the field 
@@ -34,27 +36,28 @@
         </div>
     </div>
     <div class="formPanel">
-        <span>Enter your name here:</span>
+        <span class="text1">Enter your name here:</span>
         <form id="name-form">
             <input type="text" id="name-input">
             <input type="submit" id="add-name" value="submit">
         </form>
     </div>
+    <br>
     <div class="class class-default">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="panel panel-default playerPanel" id="playerPanel1">
                     <div class="panel-heading panelName">
-                        <h3 class="panel-title text-center"></h3>
+                        <h3 class="panel-title text-center text1" id="playerOneName"></h3>
                     </div>
                     <div class="panel-body panelOption text-center">
-		                <button class="p1Option">Volcano</button>
+		                <button class="p1Option text2">Volcano</button>
 		            </div>
 		            <div class="panel-body panelOption text-center">
-		                <button class="p1Option">Lizard</button>
+		                <button class="p1Option text2">Lizard</button>
 		            </div>
 		            <div class="panel-body panelOption text-center">
-		                <button class="p1Option">Spock</button>
+		                <button class="p1Option text2">Spock</button>
 		            </div>
                     <div class="panel-body panelStats text-center">
 		                <div class="stats" id="player1Stats"></div>
@@ -63,23 +66,23 @@
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4">
 		        <div class="panel panel-default gamePanel">
-		            <h3 class="panel-title text-center" id="waitingNotice"></h3>
-		            <h3 class="panel-title text-center" id="roundOutcome"></h3>
+		            <h3 class="panel-title text-center text2" id="waitingNotice"></h3>
+		            <h3 class="panel-title text-center text2" id="roundOutcome"></h3>
 		        </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4">
 		        <div class="panel panel-default playerPanel" id="playerPanel2">
 		            <div class="panel-heading panelName">
-						<h3 class="panel-title text-center" id="playerTwoName"></h3>
+						<h3 class="panel-title text-center text1" id="playerTwoName"></h3>
 					</div>
 		            <div class="panel-body panelOption text-center">
-		                <button class="p2Option">Volcano</button>
+		                <button class="p2Option text2">Volcano</button>
 		            </div>
 		            <div class="panel-body panelOption text-center">
-		                <button class="p2Option">Lizard</button>
+		                <button class="p2Option text2">Lizard</button>
 		            </div>
 		            <div class="panel-body panelOption text-center">
-		                <button class="p2Option">Spock</button>
+		                <button class="p2Option text2">Spock</button>
 		            </div>
 		            <div class="panel-body panelStats text-center">
 		                <div class="stats" id="player2Stats"></div>
@@ -90,11 +93,13 @@
     </div>
     <div class="row">
 	    <div class="col-lg-8 col-md-8 col-sm-8">
-	    	<div id="chatDisplay"></div>
+            <br>
+	    	<div class="text1" id="chatDisplay"></div>
 	    </div>
 		<div class="col-lg-4 col-md-4 col-sm-4"> 
+            <br>
 		    <div class="chatInput">
-		    	<div class="chatLabel">Enter Message Here</div>
+		    	<div class="chatLabel text1">Enter Message Here</div>
 				<div class="chatPanel"> 
 					<form id="chat-form">
 						<textarea type="text" id="chat-input"></textarea>
