--- a/index.html
+++ b/index.html
@@ -51,14 +51,29 @@
                         <h3 class="panel-title text-center text1" id="playerOneName"></h3>
                     </div>
                     <div class="panel-body panelOption text-center">
-		                <button class="p1Option text2">Volcano</button>
-		            </div>
+                        <div class="img-dropdown">
+                        <button class="p1Option text2">Volcano</button>
+                        <div class="img-display">
+                            <img src="Assets/images/volcano.jpg">
+                        </div>
+                        </div>
+                    </div>
 		            <div class="panel-body panelOption text-center">
-		                <button class="p1Option text2">Lizard</button>
-		            </div>
+                        <div class="img-dropdown">
+                        <button class="p1Option text2">Lizard</button>
+                        <div class="img-display">
+                            <img src="Assets/images/xtoloc.jpg">
+                        </div>
+                        </div>
+                    </div>
 		            <div class="panel-body panelOption text-center">
-		                <button class="p1Option text2">Spock</button>
-		            </div>
+                        <div class="img-dropdown">
+                        <button class="p1Option text2">Spock</button>
+                        <div class="img-display">
+                            <img src="Assets/images/unnamed.jpg">
+                        </div>
+                        </div>
+                    </div>
                     <div class="panel-body panelStats text-center">
 		                <div class="stats" id="player1Stats"></div>
 		            </div>
@@ -76,13 +91,28 @@
 						<h3 class="panel-title text-center text1" id="playerTwoName"></h3>
 					</div>
 		            <div class="panel-body panelOption text-center">
-		                <button class="p2Option text2">Volcano</button>
+                        <div class="img-dropdown">
+                        <button class="p2Option text2">Volcano</button>
+                        <div class="img-display2"> 
+                            <img src="Assets/images/volcano.jpg">
+                        </div>
+                        </div>
 		            </div>
 		            <div class="panel-body panelOption text-center">
-		                <button class="p2Option text2">Lizard</button>
+                        <div class="img-dropdown"> 
+                        <button class="p2Option text2">Lizard</button>
+                        <div class="img-display2">
+                            <img src="Assets/images/xtoloc.jpg">
+                        </div>
+                        </div>
 		            </div>
 		            <div class="panel-body panelOption text-center">
-		                <button class="p2Option text2">Spock</button>
+                        <div class="img-dropdown">
+                        <button class="p2Option text2">Spock</button>
+                        <div class="img-display2">
+                            <img src="Assets/images/unnamed.jpg">
+                        </div>
+                        </div>
 		            </div>
 		            <div class="panel-body panelStats text-center">
 		                <div class="stats" id="player2Stats"></div>
