--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             <div class="col-lg-4 col-md-4 col-sm-4">
 		        <div class="panel panel-default gamePanel">
 		            <h3 class="panel-title text-center text2" id="waitingNotice"></h3>
-		            <h3 class="panel-title text-center text2" id="roundOutcome"></h3>
+                    <h3 class="panel-title text-center text2" id="roundOutcome"></h3>
+                    <div class="panel-title text-center" id="roundImg"></div>
 		        </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4">
